----------------------------------------------------------------
mirt 0.4.1
----------------------------------------------------------------

* better system to specify fixed/free parameters and starting values using
  pars = 'values' 

* graded model type rating scale added (Muraki, 1990) with optional estimation 'blocks'. Use 
  itemtype = 'grsm', and the grsm.block option

* for multipleGroup(), optional input added to change the current freely estimated parameters 
  to values of a previously computed model. This will save needless iterations in the EM and MHRM
  since these parameters should be much closer to the new ML estimates 

* analytical derivatives much more stable, although some are not yet optimized

* updated documentation and beamer slide show included for some background on MIRT and some 
  of the packages capabilities

* labels added to coef(..., allpars = TRUE) when standard erros not computed

* kernel estimation moved entirely to one method. Much easier to maintain and guarantees consistency
  across methods (i.e., no more quasi-Newton algorithms)

----------------------------------------------------------------
mirt 0.4.0
----------------------------------------------------------------

* Added itemfit() and personfit() functions for uni and multidimensional models. Within itemfit
  empirical response curves can also be plotted for unidimensional models

* Wrapped itemplot() and fscores() into S3 function for better documentation. Also response curve
  now are all contained in individual plots

* Added free.start list option for all estimation functions. Allows a quicker way to 
  specify free and fixed parameters

* Added iteminfo() and extract.item() to calculate the item information and extract 
  desired items

* Multiple group estimation available with the multipleGroup() function. Uses the EM and MHRM
  as the estimation engines. The MHRM seems to be faster at two factors+