@@ -1,16 +1,14 @@
 #' Item fit statistics
 #' 
-#' \code{itemfit} calculates the Zh values from Drasgow, Levine and Williams (1985) for 
-#' unidimensional and multidimensional models, or \eqn{\chi^2} values for unidimensional models.
+#' \code{itemfit} calculates the Zh values from Drasgow, Levine and Williams (1985), infits, and outfits for 
+#' unidimensional and multidimensional models, and \eqn{\chi^2} values for unidimensional models.
 #' 
 #' 
 #' @aliases itemfit
 #' @param x a computed model object of class \code{ExploratoryClass}, \code{ConfirmatoryClass}, or 
 #' \code{MultipleGroupClass}
-#' @param type a character specifying whether the Zh (\code{'Zh'}) or \eqn{\chi^2} (\code{'X2'}) statistic
-#' should be computed. Not that \code{'X2'} can only be used for unidimensional models
-#' @param ngroups the number of theta groupings to use when computing \code{'X2'}. Cells that have 
-#' any expected values less than 5 are dropped and the degrees of freedom are adjusted accordingly
+#' @param X2 logical; calculate the X2 statistic for unidimensional models?
+#' @param group.size approximate size of each group to be used in calculating the \eqn{\chi^2} statistic
 #' @param empirical.plot a single numeric value indicating which item to plot (via \code{itemplot}) and
 #' overlay with the empirical \eqn{\theta} groupings. Only applicable when \code{type = 'X2'}. 
 #' The default is \code{NULL}, therefore no plots are drawn 
@@ -46,11 +44,11 @@
 #' 
 #'   }
 #'
-itemfit <- function(x, type = 'Zh', ngroups = 10, empirical.plot = NULL){
+itemfit <- function(x, X2 = FALSE, group.size = 150, empirical.plot = NULL){    
     if(is(x, 'MultipleGroupClass')){
         ret <- list()   
         for(g in 1:length(x@cmods))
-            ret[[g]] <- itemfit(x@cmods[[g]], type=type, ngroups=ngroups)
+            ret[[g]] <- itemfit(x@cmods[[g]], group.size=group.size)
         names(ret) <- names(x@cmods)
         return(ret)
     }    
@@ -61,9 +59,35 @@ itemfit <- function(x, type = 'Zh', ngroups = 10, empirical.plot = NULL){
     prodlist <- attr(pars, 'prodlist')    
     nfact <- x@nfact + length(prodlist)
     fulldata <- x@fulldata    
-    Theta <- sc[ ,ncol(sc):(ncol(sc) - nfact + 1), drop = FALSE]
-    if(type == 'X2'){
-        if(nfact > 1) stop('Item chi-squared values are only available for unidimensional models')
+    Theta <- sc[ ,ncol(sc):(ncol(sc) - nfact + 1), drop = FALSE]        
+    N <- nrow(Theta)
+    itemtrace <- matrix(0, ncol=ncol(fulldata), nrow=N)        
+    for (i in 1:J)            
+        itemtrace[ ,itemloc[i]:(itemloc[i+1] - 1)] <- ProbTrace(x=pars[[i]], Theta=Theta)        
+    LL <- itemtrace * fulldata        
+    LL[LL < 1e-8] <- 1
+    Lmatrix <- matrix(log(LL[as.logical(fulldata)]), N, J)              
+    mu <- sigma2 <- rep(0, J)
+    for(item in 1:J){              
+        for(n in 1:N){                
+            P <- itemtrace[n ,itemloc[item]:(itemloc[item+1]-1)]
+            mu[item] <- mu[item] + sum(P * log(P))            
+            for(i in 1:length(P)){
+                for(j in 1:length(P)){
+                    if(i != j)
+                        sigma2[item] <- sigma2[item] + P[i] * P[j] * log(P[i]) * log(P[i]/P[j])
+                }
+            }                               
+        }               
+    }        
+    Zh <- (colSums(Lmatrix) - mu) / sqrt(sigma2)
+    pf <- personfit(x)
+    attr(x, 'inoutfitreturn') <- TRUE
+    pf <- personfit(x)
+    outfit <- colSums(pf$Z^2) / J
+    infit <- colSums(pf$Z^2 * pf$info) / colSums(pf$info)        
+    ret <- data.frame(item=colnames(x@data), outfit=outfit, infit=infit, Zh=Zh)
+    if(X2 && nfact == 1){                
         ord <- order(Theta[,1])    
         fulldata <- fulldata[ord,]
         Theta <- Theta[ord, , drop = FALSE]
@@ -71,6 +95,7 @@ itemfit <- function(x, type = 'Zh', ngroups = 10, empirical.plot = NULL){
         den <- den / sum(den)
         cumTheta <- cumsum(den)
         Groups <- rep(20, length(ord))
+        ngroups <- ceiling(nrow(fulldata) / group.size)        
         weight <- 1/ngroups        
         for(i in 1:20)
             Groups[round(cumTheta,2) >= weight*(i-1) & round(cumTheta,2) < weight*i] <- i        
@@ -93,42 +118,15 @@ itemfit <- function(x, type = 'Zh', ngroups = 10, empirical.plot = NULL){
                 if(any(N * P < 2)){
                     df[i] <- df[i] - 1
                     next
-                }                
+                }                                
                 X2[i] <- X2[i] + sum((r - N*P)^2 / N*P)
-            }
+            }            
             df[i] <- df[i] + n.uniqueGroups*(length(r) - 1) - sum(pars[[i]]@est)            
         }
+        X2[X2 == 0] <- NA
         if(!is.null(empirical.plot)) return(invisible(NULL))
-        p <- pchisq(X2, df, lower.tail = FALSE)               
-        ret <- data.frame(item=colnames(x@data), X2=X2, df=df, p=round(p,3)) 
-        return(ret)
-    }    
-    if(type == 'Zh'){
-        N <- nrow(Theta)
-        itemtrace <- matrix(0, ncol=ncol(fulldata), nrow=N)        
-        for (i in 1:J)            
-            itemtrace[ ,itemloc[i]:(itemloc[i+1] - 1)] <- ProbTrace(x=pars[[i]], Theta=Theta)        
-        LL <- itemtrace * fulldata        
-        LL[LL < 1e-8] <- 1
-        Lmatrix <- matrix(log(LL[as.logical(fulldata)]), N, J)              
-        mu <- sigma2 <- rep(0, J)
-        for(item in 1:J){              
-            for(n in 1:N){                
-                P <- itemtrace[n ,itemloc[item]:(itemloc[item+1]-1)]
-                mu[item] <- mu[item] + sum(P * log(P))            
-                for(i in 1:length(P)){
-                    for(j in 1:length(P)){
-                        if(i != j)
-                            sigma2[item] <- sigma2[item] + P[i] * P[j] * log(P[i]) * log(P[i]/P[j])
-                    }
-                }                               
-            }               
-        }        
-        Zh <- (colSums(Lmatrix) - mu) / sqrt(sigma2)
-        p <- round(pnorm(Zh), 3)
-        p[Zh > 0] <- 1 - p[Zh > 0]
-        p <- 2*p
-        ret <- data.frame(item=colnames(x@data), Zh=Zh, p=p)                
-        return(ret)
-    }    
+        ret$df <- df
+        ret$X2 <- X2
+    }                    
+    return(ret)
 }
