@@ -1,9 +1,9 @@
 #' Person fit statistics
 #' 
 #' \code{personfit} calculates the Zh values from Drasgow, Levine and Williams (1985) for 
-#' unidimensional and multidimensional models. The returned values approximate a standard normal
-#' distribution and therefore p-values are also returned. The returned object is a \code{data.frame}
-#' consisting either of the tabulated data or full data with the Zh and p-values appended to the last 
+#' unidimensional and multidimensional models, as well as infit and outfit statistics. 
+#' The returned object is a \code{data.frame}
+#' consisting either of the tabulated data or full data with the statistics appended to the last 
 #' columns. 
 #' 
 #' 
@@ -42,14 +42,14 @@
 #' 
 #'   }
 #' 
-personfit <- function(x, full.scores = FALSE){
+personfit <- function(x, full.scores = FALSE){    
     if(is(x, 'MultipleGroupClass')){
         ret <- list()   
         for(g in 1:length(x@cmods))
             ret[[g]] <- personfit(x@cmods[[g]], full.scores=full.scores)
         names(ret) <- names(x@cmods)
         return(ret)
-    }    
+    }
     sc <- fscores(x, verbose = FALSE, full.scores=full.scores) 
     J <- ncol(x@data)
     itemloc <- x@itemloc
@@ -64,7 +64,8 @@ personfit <- function(x, full.scores = FALSE){
         fulldata <- fulldata[,-ncol(fulldata)]
         Theta <- sc[ ,ncol(sc):(ncol(sc) - nfact + 1) - nfact, drop = FALSE]        
     }
-    itemtrace <- matrix(0, ncol=ncol(fulldata), nrow=nrow(Theta))        
+    N <- nrow(Theta)
+    itemtrace <- matrix(0, ncol=ncol(fulldata), nrow=N)        
     for (i in 1:J)
         itemtrace[ ,itemloc[i]:(itemloc[i+1] - 1)] <- ProbTrace(x=pars[[i]], Theta=Theta)
     LL <- itemtrace * fulldata
@@ -84,12 +85,20 @@ personfit <- function(x, full.scores = FALSE){
             }            
         }
         Zh[n] <- (LL[n] - mu) / sqrt(sigma2)
-    }    
-    p <- round(pnorm(Zh), 3) 
-    p[Zh > 0] <- round(pnorm(Zh[Zh>0], lower.tail = FALSE), 3)
-    p <- 2*p
-    if(full.scores) ret <- data.frame(x@data, Zh=Zh, p=p)
-    else ret <- data.frame(x@tabdata, Zh=Zh, p=p)
-    ret
+    }               
+    V <- Z <- info <- matrix(0, ncol=J, nrow=N)        
+    for (i in 1:J){
+        P <- ProbTrace(x=pars[[i]], Theta=Theta)
+        dat <- fulldata[ ,itemloc[i]:(itemloc[i+1] - 1)]            
+        item <- extract.item(x, i)
+        info[,i] <- iteminfo(item, Theta)
+        Z[ ,i] <- rowSums(dat - dat * P) / sqrt(info[,i])                         
+    }
+    if(!is.null(attr(x, 'inoutfitreturn'))) return(list(Z=Z, info=info))
+    outfit <- rowSums(Z^2) / J
+    infit <- rowSums(Z^2 * info) / rowSums(info)    
+    if(full.scores) ret <- data.frame(x@data, outfit=outfit, infit=infit, Zh=Zh)
+    else ret <- data.frame(x@tabdata, outfit=outfit, infit=infit, Zh=Zh)        
+    return(ret)
 }
     
