@@ -2,7 +2,7 @@
 \alias{itemfit}
 \title{Item fit statistics}
 \usage{
-  itemfit(x, type = "Zh", ngroups = 10,
+  itemfit(x, X2 = FALSE, group.size = 150,
     empirical.plot = NULL)
 }
 \arguments{
@@ -10,15 +10,11 @@
   \code{ExploratoryClass}, \code{ConfirmatoryClass}, or
   \code{MultipleGroupClass}}
 
-  \item{type}{a character specifying whether the Zh
-  (\code{'Zh'}) or \eqn{\chi^2} (\code{'X2'}) statistic
-  should be computed. Not that \code{'X2'} can only be used
-  for unidimensional models}
+  \item{X2}{logical; calculate the X2 statistic for
+  unidimensional models?}
 
-  \item{ngroups}{the number of theta groupings to use when
-  computing \code{'X2'}. Cells that have any expected
-  values less than 5 are dropped and the degrees of freedom
-  are adjusted accordingly}
+  \item{group.size}{approximate size of each group to be
+  used in calculating the \eqn{\chi^2} statistic}
 
   \item{empirical.plot}{a single numeric value indicating
   which item to plot (via \code{itemplot}) and overlay with
@@ -28,9 +24,9 @@
 }
 \description{
   \code{itemfit} calculates the Zh values from Drasgow,
-  Levine and Williams (1985) for unidimensional and
-  multidimensional models, or \eqn{\chi^2} values for
-  unidimensional models.
+  Levine and Williams (1985), infits, and outfits for
+  unidimensional and multidimensional models, and
+  \eqn{\chi^2} values for unidimensional models.
 }
 \examples{
 \dontrun{
