@@ -2,6 +2,8 @@
 mirt 0.4.1
 ----------------------------------------------------------------
 
+* infit and outfit statistics added to personfit() and itemfit()
+
 * better system to specify fixed/free parameters and starting values using
   pars = 'values' 
 
@@ -20,7 +22,7 @@ mirt 0.4.1
 * labels added to coef(..., allpars = TRUE) when standard erros not computed
 
 * kernel estimation moved entirely to one method. Much easier to maintain and guarantees consistency
-  across methods (i.e., no more quasi-Newton algorithms)
+  across methods (i.e., no more quasi-Newton algorithms used)
 
 ----------------------------------------------------------------
 mirt 0.4.0
